--- a/src/Style.scss
+++ b/src/Style.scss
@@ -7,3 +7,40 @@
     }
   }
 }
+
+//SinglePage
+.single {
+  display: flex;
+  gap: 40px;
+  padding-left: 40px;
+  margin-top: 40px;
+  .content {
+    flex: 5;
+    img {
+      object-fit: cover;
+    }
+    .user {
+      padding: 5px;
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      font-size: 14px;
+      img {
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        object-fit: cover;
+      }
+      span {
+        font-weight: bold;
+        color: white;
+      }
+      p {
+        color: #807182;
+      }
+    }
+  }
+  .menu {
+    flex: 2;
+  }
+}
