edit single page

--- a/src/Style.scss
+++ b/src/Style.scss
@@ -38,6 +38,15 @@
       p {
         color: #807182;
       }
+      .edit {
+      display: flex;
+      gap: 5px;
+      img{
+        width: 20px;
+        height: 20px;
+        cursor: pointer;
+      }
+      }
     }
   }
   .menu {
