--- a/src/Style.scss
+++ b/src/Style.scss
@@ -1,9 +1,11 @@
 .home {
   .posts {
     .post {
-      &:nth-child(2n) {
+      &:nth-child(2n+1) {
         flex-direction: row-reverse;
+        margin-bottom: 20%;
       }
+
     }
   }
 }
@@ -109,7 +111,7 @@
       }
     }
   }
-  .menu {
+  .Menu {
     flex: 2;
     display: flex;
     flex-direction: column;
@@ -118,6 +120,9 @@
     .items {
       padding: 3px;
       margin: 20px;
+      flex: 1;
+      display: flex;
+      flex-direction: column;
     }
   }
 }
