--- a/src/index.css
+++ b/src/index.css
@@ -4,24 +4,24 @@
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
 @keyframes slide {
   0% {
-    transform: translateX(-7px) translate3d(0px,0px,0px);
+    transform: translateX(-7px) translate3d(0px, 0px, 0px);
   }
-  100%{
-    transform: translateX(245px) translate3d(0px,0px,0px);
+  100% {
+    transform: translateX(245px) translate3d(0px, 0px, 0px);
   }
 }
 
@@ -31,10 +31,9 @@ code {
   animation: slide 6s infinite linear alternate;
 }
 
-
 .text-gradient {
   background-clip: text;
   -webkit-background-clip: text;
   color: transparent;
-  background-image: linear-gradient(90deg, #E9A748, #72B89E);
+  background-image: linear-gradient(90deg, #e9a748, #72b89e);
 }
